set(easy_source_files 
    sortedArrayToBST.cpp
    oneAndTwoBitChars.cpp
    moveZeroes.cpp
    sumOfTwoNoZeroIntegers.cpp
    numberofboomeranges.cpp
    228summaryranges.cpp
    232implementQueueUsingStacks.cpp
    290wordPattern.cpp
    292NimGame.cpp
)
add_library(easy_sources OBJECT "${easy_source_files}")
