set(easy_source_files 
    sortedArrayToBST.cpp
    oneAndTwoBitChars.cpp
    moveZeroes.cpp
    sumOfTwoNoZeroIntegers.cpp
    numberofboomeranges.cpp
    228summaryranges.cpp
    232implementQueueUsingStacks.cpp
    290wordPattern.cpp
    292NimGame.cpp
    344ReverseString.cpp
    345ReverseVowels.cpp
    349IntersectionofTwoArrays.cpp
    350IntersectionofTwoArraysII.cpp
    434NumberOfSegmentsInAString.cpp
)
add_library(easy_sources OBJECT "${easy_source_files}")
