set(med_source_files 
  456132Pattern.cpp
  1162AsFarFromLandAsPossible.cpp
  184Sum.cpp
  40CombintaionSumII.cpp
  207CourseSchedule.cpp
  735AsteroidCollision.cpp
  29DivideTwoIntegers.cpp
  8StringToInteger.cpp
  150EvaluateReversePolishNotation.cpp
)
add_library(med_sources OBJECT "${med_source_files}")
